--- a/style.css
+++ b/style.css
@@ -61,8 +61,9 @@ body {
 }
 
 #side-description {
-    background-color: white;
+    background-color: rgba(122,122,122,.4);
     height: 100%;
+    color: white
 }
 
 #blurbg {
